# bootstr.app

./: .dockerignore  .editorconfig  .gitignore  LICENSE  README.md  compose.override.yaml  compose.yaml  pyproject.toml
.github/: renovate.json5
.github/actions/setup-python/: action.yaml
.github/workflows/: ci.yaml  deploy-api.yaml  deploy-app.yaml  deploy-app2.yaml  deploy-webadmin.yaml  deploy-webapp.yaml
applications/api/: README.md  pyproject.toml
applications/api/src/api/: __init__.py  main.py  settings.py
applications/cli/: README.md  pyproject.toml
applications/cli/src/cli/: __init__.py  main.py
applications/webadmin/: README.md  pyproject.toml
applications/webadmin/src/webadmin/: __init__.py  main.py  settings.py
applications/webapp/: README.md  pyproject.toml
applications/webapp/src/webapp/: __init__.py  di.py  main.py  settings.py
applications/webapp/src/webapp/routers/: root.py
applications/webapp/src/webapp/templates/: about.jinja  index.jinja  layout.jinja
applications/webapp/src/webapp/templates/components/: footer.jinja  header.jinja
deployment/: Dockerfile  README.md
deployment/ecs/: Chart.yaml  values.dev.yaml  values.prod.yaml
deployment/ecs/templates/: ecs-task.json
scripts/: deploy_webadmin.py  deploy_webapp.py
