[project]
name = "webadmin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "core",
    "functionality1",
    "fastapi>=0.115.2",
    "hypercorn[uvloop]>=0.17.3",
    "uvloop>=0.21.0",
    "jinja2>=3.1.4",
    "authlib>=1.3.2",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.9.2",
]

[project.scripts]
webadmin = "webadmin:entrypoint"

[tool.uv.sources]
core = { workspace = true }
functionality1 = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
